--- a/src/index.html
+++ b/src/index.html
@@ -7,8 +7,18 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" type="image/x-icon" href="favicon.png" />
+    <script src="https://checkout.stripe.com/checkout.js"></script>
+    <script type="text/javascript" src="https://js.stripe.com/v3/"></script>
+    <script type="text/javascript">
+      Stripe.setPublishableKey("pk_test_oi0sKPJYLGjdvOXOM8tE8cMa");
+    </script>
   </head>
   <body>
     <app-root></app-root>
+    <script
+      async
+      defer
+      src="http://maps.googleapis.com/maps/api/js?key=AIzaSyDP0qix8TUVIvQmlBwvR0-uGfQyVwHuxQs"
+    ></script>
   </body>
 </html>
