--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" type="image/x-icon" href="favicon.png" />
     <script src="https://checkout.stripe.com/checkout.js" defer></script>
-    <!-- <script src="https://checkout.stripe.com/checkout.js"></script> -->
     <script src="https://js.stripe.com/v3/"></script>
     <link
       rel="stylesheet"
@@ -25,5 +24,26 @@
       defer
       src="http://maps.googleapis.com/maps/api/js?key=AIzaSyDP0qix8TUVIvQmlBwvR0-uGfQyVwHuxQs"
     ></script>
+    <!-- <script>
+  window.fbAsyncInit = function() {
+    FB.init({
+      appId      : '577636242810978',
+      cookie     : true,
+      xfbml      : true,
+      version    : 'v5.0'
+    });
+      
+    FB.AppEvents.logPageView();   
+      
+  };
+
+  (function(d, s, id){
+     var js, fjs = d.getElementsByTagName(s)[0];
+     if (d.getElementById(id)) {return;}
+     js = d.createElement(s); js.id = id;
+     js.src = "https://connect.facebook.net/en_US/sdk.js";
+     fjs.parentNode.insertBefore(js, fjs);
+   }(document, 'script', 'facebook-jssdk'));
+</script> -->
   </body>
 </html>
